fixed horizontal scroll

--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -2,7 +2,7 @@ $dark-purple: #6c55e0;
 
 .mat-mdc-card {
   margin: 2rem;
-  height: 80vh;
+  // height: 80vh;
   border-radius: 10px;
 }
 
